# tinyland-otel

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  flake.nix  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
src/: config.ts  fileLogger.ts  index.ts  instrumentation.ts  observability-config.ts  otel-node.ts  span-metrics.ts  traceql-query.ts  traceql-templates.ts  traceql.ts  tracers.ts  types.ts
src/persistence/: saved-queries.ts
src/services/: query-performance.ts  tempo-query.ts  tempo-red-metrics.ts
tests/: config.test.ts  package-authority.test.ts  query-performance.test.ts  saved-queries.test.ts  span-metrics.test.ts  templates.test.ts  tempo-query.test.ts  tempo-red-metrics.test.ts  traceql.test.ts  tracer.test.ts
