"""
BUILD.bazel for @tummycrypt/tinyland-otel.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/tinyland-otel && pnpm build
  Monorepo:   bazel build //packages/tinyland-otel/...
"""

load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")

# =============================================================================
# npm link - makes node_modules available for this package
# =============================================================================

npm_link_all_packages(name = "node_modules")


# =============================================================================
# TypeScript compilation
# =============================================================================

ts_project(
    name = "tinyland_otel",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ) + ["package.json"],
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    out_dir = "dist",
    root_dir = "src",
    validate = False,
    deps = [
        ":node_modules",
        "//packages:tsconfig_base",
        ":node_modules/@types/node",
        ":node_modules/@opentelemetry/api",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# npm package target
# =============================================================================

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland_otel",
    ],
    package = "@tummycrypt/tinyland-otel",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Test targets
# =============================================================================

vitest_bin.vitest_test(
    name = "test",
    data = [
        ":node_modules",
        "tsconfig.json",
        "//packages:tsconfig_base",
        ":node_modules/vitest",
        "vitest.config.ts",
    ] + glob(["src/**/*.ts"]) + glob(["tests/**/*.test.ts", "tests/**/*.ts"]),
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Typecheck-only target
# =============================================================================

ts_project(
    name = "typecheck",
    srcs = glob(["src/**/*.ts"]) + ["package.json"],
    declaration = False,
    no_emit = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        ":node_modules",
        "//packages:tsconfig_base",
        ":node_modules/@types/node",
        ":node_modules/@opentelemetry/api",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Exported files for downstream consumers
# =============================================================================

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
